# python-soql-parser

./: README.md  pyproject.toml
python_soql_parser/: core.py  date_literals.py
