[tool.poetry]
name = "python-soql-parser"
version = "0.2.0"
description = "A pyparsing-based library for parsing SOQL statements"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/python-soql-parser"
authors = ["Alex Drozd <drozdster@gmail.com>"]
keywords = ["python", "soql", "pyparsing", "parsing", "salesforce"]
packages = [
    { include = "python_soql_parser" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
